--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,11 +14,16 @@
     }
     .nav-list{
       display: flex;
+      flex-wrap: wrap;
 
       .li{
         padding: 0 15px;
         list-style: none;
-        display: inline-block;
+        cursor: pointer;
+        flex-shrink: 0;
+        &:hover{
+          background-color: aquamarine;
+        }
 
       }
     }
@@ -26,13 +31,48 @@
 
     .user-info{
       //background-color: cadetblue;
+      height: 100%;
+      display: flex;
+     justify-items: right;
+      justify-content:flex-end ;
+
+      align-items: center;
+      .avatar{
+        border-radius: 50%;
+        height: 50%;
+        width: 30px;
+        img{
+          border-radius: 50%;
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .username{
+        white-space:nowrap;
+        overflow:hidden;
+        text-overflow:ellipsis;
+        transition: all 0.5s;
+        border-bottom: 1px solid transparent;
+        cursor: pointer;
+        padding: 0 15px;
+        padding-bottom: 2px;
+        &:hover{
+          padding-bottom: 2px;
+          border-bottom: 1px solid #d8d8d8;
+        }
+      }
+    }
+    .mobile-menu{
+      position: fixed;
+      background-color: aquamarine;
+      right: 10px;
+      bottom: 200px;
+
     }
   }
 
   .slider{
-    width: 960px;
-    height: 600px;
-    margin: 0 auto;
+
   }
 
   .login-guide{
@@ -40,7 +80,7 @@
     width: 100%;
     z-index: 1008611;
     bottom: 0;
-    left: 0;
+    right: 0;
   }
 
 
