--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,10 @@
     </div>
     <div class="user-info col-md-2 col-6">
       <div class="avatar"><img src="../assets/img/avatar.jpg" alt=""></div>
-      <div class=" username">crazyming</div>
+      <div class=" username">crazyming
+        <ul class="user-dropdown"><li>个人中心</li><li>退出登录</li></ul>
+      </div>
+
     </div>
     <div class="d-md-none mobile-menu">MENU</div>
   </nav>
