--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,7 @@
       flex-wrap: wrap;
 
       .li{
-        padding: 0 15px;
+        padding: 0 30px;
         list-style: none;
         cursor: pointer;
         flex-shrink: 0;
@@ -38,6 +38,8 @@
       display: flex;
      justify-items: right;
       justify-content:flex-end ;
+      position: relative;
+
 
       align-items: center;
       .avatar{
@@ -55,15 +57,36 @@
         overflow:hidden;
         text-overflow:ellipsis;
         transition: all 0.5s;
-        border-bottom: 1px solid transparent;
         cursor: pointer;
         padding: 0 15px;
-        padding-bottom: 2px;
+
+
         &:hover{
-          padding-bottom: 2px;
-          border-bottom: 1px solid #d8d8d8;
+
         }
+        .user-dropdown{
+          box-shadow: rgb(225, 225, 225) 0 2px 3px;
+          position: absolute;
+          top: 30px;
+          right: 20px;
+          background-color: white;
+          width: 100px;
+          z-index: 1000;
+          padding: 15px;
+          font-size: 0.8rem;
+          box-sizing: border-box;
+          li{
+            list-style: none;
+            width: 100%;
+
+
+
+          }
+        }
+
       }
+
+
     }
     .mobile-menu{
       position: fixed;
