--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,15 +1,20 @@
-.container{
+
+
+.container-fluid{
 
   .slider{
-    margin: 15px 0;
+    margin-bottom: 15px;
+    width: 100%;
+    padding: 0;
+
   }
 
   @media screen and (min-width: 768px) {
     .slider{
 
-      height: 460px;
+      height: 500px;
       & /deep/ img{
-        height: 460px!important;
+        height: 500px!important;
       }
 
     }
@@ -17,10 +22,34 @@
   }
 
 
+
+}
+.container{
+
+
   .news-list-wrapper{
     .news-list{
-      background-color: white;
-      padding: 5px;
+      ul{
+        margin: 0;
+        padding: 0;
+        li{
+          list-style: none;
+          background-color: white;
+          padding: 8px;
+          cursor: pointer;
+          margin-bottom: 5px;
+          border-radius: 1px ;
+          &:hover{
+            background-color: #f6f6f6;
+          }
+          h5{
+
+          }
+          span{
+            color: gray;
+          }
+        }
+      }
     }
 
 
