--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,6 +28,9 @@
 </div>
 <router-outlet>
 </router-outlet>
+<footer>
+  Super Song 版权所有
+</footer>
 
 <div class="d-md-none mobile-menu">
 <div class="menu-primary"><i class="fa fa-home fa-2x"></i><div>首页</div></div>
