--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -127,8 +127,13 @@
     bottom: 0;
     right: 0;
   }
-  .test{
-    font-size: 1rem;
+  footer{
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    margin-bottom: 60px;
+    font-size: 13px;
+    color: gray;
   }
 
 
