--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,7 @@
 
+.container-fluid {
 
-.container-fluid{
-
-  .slider{
+  .slider {
     margin-bottom: 15px;
     width: 100%;
     padding: 0;
@@ -10,11 +9,12 @@
   }
 
   @media screen and (min-width: 768px) {
-    .slider{
+    .slider {
 
-      height: 500px;
-      & /deep/ img{
-        height: 500px!important;
+      height: 750px;
+
+      & /deep/ img {
+        height: 750px !important;
       }
 
     }
@@ -22,32 +22,94 @@
   }
 
 
-
 }
-.container{
+
+.container {
 
 
-  .news-list-wrapper{
-    .news-list{
-      ul{
+  .news-list-wrapper {
+    .news-list {
+      ul {
         margin: 0;
         padding: 0;
-        li{
+
+        li {
           list-style: none;
           background-color: white;
           padding: 8px;
           cursor: pointer;
-          margin-bottom: 5px;
-          border-radius: 1px ;
-          &:hover{
-            background-color: #f6f6f6;
+          margin-bottom: 12px;
+          border-radius: 1px;
+          display: flex;
+          flex-wrap: wrap;
+          transition: all 0.5s;
+          &:hover {
+            background-color: #fbfbfb;
+            box-shadow: rgba(203, 203, 203, .5) 0 1px 2px 0;
           }
-          h5{
+
+          h5 {
+            width: 100%;
+            font-size: 24px;
+            margin: 0;
+            //overflow: hidden;
+            //text-overflow: ellipsis;
+            //white-space: nowrap;
 
           }
-          span{
-            color: gray;
+
+          .mobile-h5 {
+            font-size: 18px;
           }
+
+          .info {
+            width: 100%;
+            text-align: right;
+            margin-bottom: 5px;
+            & > span {
+              font-size: 12px;
+              color: #b3b3b3;
+              margin-right: 15px;
+
+              .fa {
+                margin-right: 5px;
+              }
+            }
+          }
+
+          .article-img {
+            width: 35%;
+            padding-top: 20%;
+            position: relative;
+
+            img {
+              width: 100%;
+              position: absolute;
+              height: 100%;
+              top: 0;
+              left: 0;
+            }
+          }
+
+          .summary-wrapper {
+            flex: 1;
+            padding: 15px;
+            padding-top: 0;
+            height: 100%;
+
+            .summary {
+              color: gray;
+              margin-top: 15px;
+              height: 100%;
+              overflow: hidden;
+              font-size: 16px;
+            }
+
+            .mobile-summary {
+              font-size: 12px;
+            }
+          }
+
         }
       }
     }
@@ -55,8 +117,8 @@
 
   }
 
-  .right-side-wrapper{
-    .right-side{
+  .right-side-wrapper {
+    .right-side {
       background-color: white;
       padding: 5px;
     }
