--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,14 +1,24 @@
-
-
+@import '../variables';
+.top{
+  background-color: #505050;
+  box-shadow: rgb(203, 203, 203) 0px 0px 4px;
+  color: white;
+  border-top: 3px solid #00aa98;
+  a:link,a:visited,a:active{
+    color: white;
+    text-decoration: none;
+  }
   .nav-wrapper{
-    background-color: white;
-    box-shadow: rgb(203, 203, 203) 0px 0px 4px;
+
     align-items: center;
     min-height: 60px;
     .logo{
       cursor: pointer;
       h1{
         font-size: 26px;
+        b{
+          color: $baseColor;
+        }
       }
       //background-color: aquamarine;
     }
@@ -24,9 +34,32 @@
         height: 60px;
         line-height: 60px;
         transition: all 0.3s;
-        &:hover{
-          background-color: #e9f4ff;
-        }
+        position: relative;
+    a{
+      width: 100%;
+      height: 100%;
+      display: block;
+      &:after{
+        content: "";
+        width:0;
+        height:3px;
+        background-color: #00aa98;
+        position:absolute;
+        left:50%;
+        bottom: 0;
+        transition: all 0.5s ;
+      }
+      &:hover:after{
+        left: 0;
+        width: 100%;
+      }
+
+
+
+    }
+        //&:hover{
+        //  background-color: #e9f4ff;
+        //}
 
       }
     }
@@ -36,7 +69,7 @@
       //background-color: cadetblue;
       height: 100%;
       display: flex;
-     justify-items: right;
+      justify-items: right;
       justify-content:flex-end ;
       position: relative;
 
@@ -44,7 +77,7 @@
       align-items: center;
       .avatar{
         border-radius: 50%;
-       height: 30px;
+        height: 30px;
         width: 30px;
         img{
           border-radius: 50%;
@@ -89,6 +122,7 @@
 
     }
   }
+}
   .mobile-menu{
 
     position: fixed;
