--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,10 +6,16 @@ $fa-font-path: "../node_modules/font-awesome/fonts";
 @import'~font-awesome/scss/font-awesome.scss';
 
 
+
 body{
   background-color: #f2f2f2;
 }
 
+@media (min-width: 1200px) {
+  .container{
+    max-width: 1300px;
+  }
+}
 
 .nav-active{
   background-color: $baseColor;
