--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
    </div>
 
 
-
+<div class="change-theme"><button (click)="changTheme()">切换主题</button></div>
 </div>
 <router-outlet>
 </router-outlet>
