--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -120,7 +120,8 @@
               flex: 1;
               text-align: center;
               font-size: 14px;
-              color: gray;
+              //color: gray;
+              color: $baseColor;
 
             }
           }
@@ -129,10 +130,10 @@
       }
 .hello{
   font-size: 14px;
+  color: gray;
 
   p{
     margin: 5px 0;
-    text-align: center;
   }
   .link{
     a{
