--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -46,7 +46,7 @@
       <div class="right-side user-info">
         <div class="user">
           <div class="avatar"><img src="../../assets/img/avatar.jpg" alt=""></div>
-          <div class="user-mini"><b>Crazyming</b>
+          <div class="user-mini"><b>crazyming</b>
             <div class="link"><a href="#">消息通知</a><a  href="#">个人资料</a><a  href="#">退出登录</a></div>
             <!--<div class="link"><a>登录</a></div>-->
           </div>
@@ -63,7 +63,7 @@
           <div class="line"></div>
         </div>
         <div class="content-wrapper">
-          <app-news-list [newsList]="newsList" [type]="2" [author]=false [createTime]=true></app-news-list>
+          <app-news-list [newsList]="announcementList" [type]="2" [author] = false [createTime] = true></app-news-list>
         </div>
       </div>
 
