--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="slider">
-            <app-carousel-config></app-carousel-config>
+            <app-carousel-config [sliderList]="sliderList"></app-carousel-config>
           </div>
 
         </div>
