--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
      <div  class="col-md-8 d-none d-md-flex"  >
        <div class="nav-list">
          <div class="li" routerLinkActive="nav-active"><a routerLink="/index" >首页</a></div>
-         <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">新闻</a></div>
+         <div class="li" routerLinkActive="nav-active"><a routerLink="/news" >新闻</a></div>
          <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">功能1</a></div>
          <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">功能2</a></div>
          <div class="li" routerLinkActive="nav-active"><a href="javascript:void(0)">功能3</a></div>
