--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -64,6 +64,7 @@
         </div>
         <div class="content-wrapper">
           <app-news-list [newsList]="announcementList" [type]="2" [author] = false [createTime] = true></app-news-list>
+          <div class="more">more<i class="fa  fa-angle-double-right"></i></div>
         </div>
       </div>
 
