--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,20 +8,33 @@ $baseColor-gray: #505050;
 $baseColor-black: black;
 $baseColor-red:#e83548;
 
+
 @mixin bg_color($color) {
 
   background-color: $color;
 
-  [data-style-theme="1"] & {
+  :host-context([data-theme-style="aa"]) & {
     background-color: $baseColor-gray;
   }
 
-  [data-style-theme="2"] & {
+  :host-context([data-theme-style="bb"])  & {
 
     background-color: $baseColor-red;
 
   }
 
+}
+
+
+@mixin font_color($color) {
+
+  color: $color;
+  :host-context([data-theme-style="aa"]) & {
+    color: green;
+  }
+  :host-context([data-theme-style="bb"]) & {
+    color: red;
+  }
 }
 
 
