--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -89,6 +89,14 @@
       .content-wrapper{
         min-height: 300px;
         padding: 15px 0;
+
+        .more{
+          cursor: pointer;
+          @include font_color($baseColor-blue);
+          width: 100%;
+          text-align: right;
+          padding: 0 15px;
+        }
       }
 
     }
